Web Inspector: [CSS Regions] Display CSS Regions flow name in the inspector overlay https://bugs.webkit.org/show_bug.cgi?id=121794
Reviewed by Joseph Pecoraro.

Source/WebCore:

No new tests, the previous test for CSS Regions highlighting covers the flow name.

This patch adds the "Flow" property in the inspector overlay. The region
chain is already displayed with numbers, so it makes sense to have the flow
name around when a CSS region is highlighted.

I've consolidated the flow information into "elementInfo.flowInfo".
Flow info has two properties: "name" and "regions".

* inspector/InspectorOverlay.cpp:
(WebCore::buildObjectForCSSRegionsHighlight):
(WebCore::InspectorOverlay::buildObjectForHighlightedNode):
* inspector/InspectorOverlayPage.css:
(.css-property): Added the CSS property font color that the Inspector uses.
* inspector/InspectorOverlayPage.html: Added a new element to be used to display the flow-from property.
* inspector/InspectorOverlayPage.js:
(_drawElementTitle):
(drawNodeHighlight):

LayoutTests:

Updated the expected results after moving the regions to the elementInfo.flowInfo property.
Also, the test is now logging the name of the flow container in the output.

* http/tests/inspector/elements-test.js:
* inspector/elements/highlight-node-regions-expected.txt:


Canonical link: https://commits.webkit.org/139802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156292 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/InspectorOverlayPage.css
+++ b/Source/WebCore/inspector/InspectorOverlayPage.css
@@ -66,6 +66,10 @@ body.platform-linux {
     color: rgb(153, 69, 0);
 }
 
+.css-property {
+    color: rgb(170, 13, 145);
+}
+
 #right-gutter {
     display: none;
     right: 0;
